Sort out recipe type/serializer registration issues